# bibtex2website

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  README.md
lib/: bibtex2website-gui.desktop
pkg/arch/: PKGBUILD
src/: CMakeLists.txt  config.cpp  config.hpp  main.cpp
src/core/: CMakeLists.txt  bibtex.cpp  bibtex.hpp  dict.hpp  html.cpp  html.hpp  string.cpp  string.hpp
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
